@@ -271,6 +271,8 @@ EXPORTS
 	wzd_debug_init
 	wzd_debug_fini
 	wzd_free
+	wzd_get_version
+	wzd_get_version_long
 	wzd_malloc
 	wzd_mutex_create
 	wzd_mutex_destroy
